@@ -1,4 +1,5 @@
 Version 5.6.0 (TBD)
+    Added new `format_empty_lines` setting to control if empty lines are formatted in a ranged selection #TINY-6483
     Fixed font size keywords such as `medium` not displaying correctly in font size menus #TINY-6291
     Fixed some incorrect types in the new TypeScript declaration file #TINY-6413
 Version 5.5.1 (TBD)
